[tool.poetry]
name = "pyloopkit"
version = "0.1.0"
description = ""
authors = ["Oliver Searle-Barnes <oliver@opsb.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
